# craigslist-scraper

./: pyproject.toml  setup.cfg
cscrape/: cli.py  scrape.py
