[metadata]
name = craigslist-scraper
version = attr: cscrape.__version__
author = Ethan Swan
author_email = ethanpswan@gmail.com

[options]
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    requests
    click
    beautifulsoup4

[options.entry_points]
console_scripts =
    cscrape = cscrape.cli:cscrape
